fix page response